force-app/main/default/objects/Lock_Out_Period__c/Lock_Out_Period__c.object-meta.xml
<CustomObject>
    <label>Lock Out Period</label>
    <nameField>
        <label>Lock Out Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lock Out Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>