force-app/main/default/objects/Lock_Out_Period__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for lock period</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>