force-app/main/default/objects/Lock_Out_Period__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is invoice locked</description>
    <label>Locked?</label>
    <type>Checkbox</type>
</CustomField>