force-app/main/default/objects/Lock_Out_Period__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date for lock period</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>